--- a/web_final/package.json
+++ b/web_final/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
-    "sweetalert2": "^11.7.3"
+    "sweetalert2": "^11.7.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
